--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,3 +1,22 @@
+@use './layout/default-layout';
+@use './nav-bar/side-nav-bar';
+@use './nav-bar/top-nav-bar';
+@use './pages/dashboard-page';
+@use './pages/form-page';
+@use './components/form/form';
+@use './components//table/result-table';
+@import '~antd/dist/antd.css';
+
+.loading-icon {
+  span {
+    font-size: 20px;
+  }
+
+  svg {
+    font-size: 50px;
+  }
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
